# ironguard

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_STATUS.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_FEATURES.md  LICENSE  PROJECT_PLAN.md  QUICK_START.md  README.md  WINDOWS_SERVER.md  checklist.md  go.mod  go.sum  install.ps1  install.sh  ironguard.toml
.cursor/plans/: ir-8782baa2.plan.md  scoring-engine-cracker-d06f1a59.plan.md
.github/workflows/: build.yml  ci.yml  release.yml
benches/: performance_benchmarks.rs  scanner_benchmarks.rs  throughput_analysis.rs  ultimate_benchmarks.rs
cmd/ironguard/: admin_unix.go  admin_windows.go  main.go
cyberpatriot-lists/: message.txt
docs/: CODEBASE.md  CODE_SIGNING.md  COMPETITION_COMMANDS.md  FEATURES.md  README.md  VICTORY.md  quick-start.md
docs/deployment/: DEPLOYMENT.md  INSTALL.md
docs/guides/: LINUX.md  WINDOWS.md  WINDOWS_SERVER.md
docs/reference/: API_REFERENCE.md
internal/agent/: agent.go  agent_test.go  baseline_adapter.go  checkpoint.go  context.go  cracker_adapter.go  memory.go  memory_adapter.go  prompts.go  subagent.go  subagent_adapter.go  timer_adapter.go  tokens.go
internal/audio/: sounds.go
internal/config/: config.go  config_test.go
internal/cracker/: cracker.go  discovery.go  interceptor_linux.go  interceptor_linux_stub.go  interceptor_stub.go  interceptor_windows.go  interceptor_windows_stub.go  output.go
internal/harden/: baseline.go  baseline_linux.go  baseline_windows.go  harden.go
internal/llm/: claude.go  gemini.go  local.go  openai.go  provider.go  provider_test.go  registry.go
internal/mcp/: adapter.go  client.go  manager.go
internal/tools/: ai_todos.go  baseline.go  desktop_control.go  documents.go  harden_tools.go  manual_tasks.go  memory_tools.go  scoring.go  screen_mode.go  screenshot.go  shell_session.go  shell_session_test.go  software.go  subagent_tools.go  timing.go  tools.go  tools_test.go  web.go
internal/tui/: checkpoint_viewer.go  commands.go  diff.go  filetree.go  manual_tasks.go  mentions.go  messages.go  popup_viewer.go  root.go  theme.go
legacy/scripts-ref/linux/: 2fa.sh  anomaly_scan.sh  base64.sh  debian.sh  xrandr.sh
legacy/scripts-ref/server/: update-pwsh.ps1
legacy/scripts-ref/windows/: update-pwsh.ps1  windows.ps1
scripts/: install.ps1  install.sh
scripts-ref/linux/: debianclaude.sh  malware_scan.sh  media_finder.sh  recent_files.sh  script_finder.sh  vuln_scan.sh
scripts-ref/server/: server.ps1
src/: ai.rs  cli.rs  database.rs  engine.rs  forensics.rs  lib.rs  lib_simple.rs  main.rs  main_simple.rs
src/config/: fallback.rs  mod.rs
src/fixes/: mod.rs
src/scanners/: competition.rs  filesystem.rs  malware.rs  mod.rs  network.rs  security_tools.rs  services.rs  software.rs  system.rs  users.rs
src/tui/: mod.rs
src/utils/: backup.rs  crypto.rs  logger.rs  mod.rs  system.rs
tests/: competition_scenarios.rs  config_tests.rs  forensics_tests.rs  scanner_integration.rs  security_validation.rs  test_basic.rs  test_ultimate_competition.rs
