[package]
name = "ironguard_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
crossterm = "0.27"
ratatui = "0.26"
which = "6.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
once_cell = "1.19"
derive_more = { version = "1.0", features = ["display"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "ironguard"
path = "src/main.rs"
